--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section class="bloque-horizontal">
             <nav>
-                <li class="horizontal"><a href="#Portafolio">Portafolio</a></li>
+                <li class="horizontal" id="portafolio-link"><a href="#Portafolio">Portafolio</a></li>
             </nav>
         </section>
 
@@ -120,6 +120,24 @@
                 </div>
             </section>
 
+            <section class="certificacion">
+                <h3 class="titulo">Idiomas</h3>
+                <div class="educacion-item">
+                    <p class="item-pre-titulo">Nivel B2</p>
+                    <h4 class="item-titulo">Inglés </h4>
+                    <p class="texto">
+                        Competencia profesional completa
+                    </p>
+                </div>
+                <div class="educacion-item">
+                    <p class="item-pre-titulo">Nativo</p>
+                    <h4 class="item-titulo">Español </h4>
+                    <p class="texto">
+                        Competencia nativa
+                    </p>
+                </div>
+            </section>
+
         </div>
 
         <div class="grupo2">
@@ -135,6 +153,19 @@
                         pertinentes para cumplir con los rigurosos requisitos de la certificación internacional NASAD
                     </p>
                 </div>
+
+                <div class="item-experiencia">
+                    <p class="item-pre-titulo">Agosto 2022 - Enero 2023</p>
+                    <h4 class="item-titulo">El Rancho Supermercado</h4>
+                    <p class="item-sub-titulo">Administrador de Inventario en ERP</p>
+                    <p class="texto">
+                        Trabajé junto a distintos perfiles profesionales ejerciendo distintos roles según la necesidad
+                        del momento, principalmente trabajé en manejo de inventario y uso de SQL para solucionar problemas
+                        de lógica.
+                    </p>
+                </div>
+
+
             </section>
 
 
@@ -176,7 +207,7 @@
 
     
     
-    <section class="bloque-horizontal">
+    <section class="bloque-horizontal" id="portafolio">
         <nav>
             <li class="horizontal">Portafolio / Proyectos</li>
         </nav>
@@ -233,14 +264,14 @@
 
         </figure>
         <figure class="portafolio-item">
-            <img class="portafolio-imagen" src="imagenes/landing.PNG" alt="Landing Page">
+            <img class="portafolio-imagen" src="imagenes/trie.PNG" alt="Estructura de Datos">
             <div class="cover">
-                <a class="portafolio-link" href="https://github.com/" target="_blank">
+                <a class="portafolio-link" href="https://github.com/CrisIntriago/Trie-Project-in-JAVA/blob/main/Grupo-5-Trie/src/main/java/Modelo/Trie.java" target="_blank">
                     <i class="fas fa-link fa-4x icono-link">
 
                     </i>
                 </a>
-                <span class="item-titulo">Landing Page</span>
+                <span class="item-titulo">Estructuras de Datos</span>
             </div>
 
         </figure>
