--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 </div>
 
                             </div>
-                            <span class="link">/CrisIntriago</span>
+                            <span class="link">cristianintriago03@gmail.com</span>
                         </div>
 
                     </div>
